--- a/tractor_inspector_finder/package.json
+++ b/tractor_inspector_finder/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "google-maps-react": "^2.0.6",
+    "react-simple-star-rating": "^4.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
